crates/axiom-typeck/tests/fixtures/errors/loop_body_not_unit.ax
fn main() { loop { 1 } }
